--- a/farad.html
+++ b/farad.html
@@ -142,24 +142,51 @@
                 <a href="signup.html" class="btn-get-started scrollto">سجل الآن</a>
             </div>
         </div>
-    </section><!-- End Hero -->
+    </section>
+    <!-- End Hero -->
 
-    <!-- The Modal About Us -->
+
+<!-- ======= Modael Section ======= -->
+    <div class="wrapper">
+        <i id="left" class="fa-solid fa-angle-left"></i>
+        <ul class="carousel">
+          <li class="Card">
+            <div class="img"><img src="images/img-1.jpg" alt="img" draggable="false"></div>
+            <h2>Blanche Pearson</h2>
+            <span>Sales Manager</span>
+          </li>
+          <li class="Card">
+            <div class="img"><img src="images/img-2.jpg" alt="img" draggable="false"></div>
+            <h2>Joenas Brauers</h2>
+            <span>Web Developer</span>
+          </li>
+          <li class="Card">
+            <div class="img"><img src="images/img-3.jpg" alt="img" draggable="false"></div>
+            <h2>Lariach French</h2>
+            <span>Online Teacher</span>
+          </li>
+          <li class="Card">
+            <div class="img"><img src="images/img-4.jpg" alt="img" draggable="false"></div>
+            <h2>James Khosravi</h2>
+            <span>Freelancer</span>
+          </li>
+          <li class="Card">
+            <div class="img"><img src="images/img-5.jpg" alt="img" draggable="false"></div>
+            <h2>Kristina Zasiadko</h2>
+            <span>Bank Manager</span>
+          </li>
+          <li class="Card">
+            <div class="img"><img src="images/img-6.jpg" alt="img" draggable="false"></div>
+            <h2>Donald Horton</h2>
+            <span>App Designer</span>
+          </li>
+        </ul>
+        <i id="right" class="fa-solid fa-angle-right"></i>
+      </div>
+<!-- ======= END HERE ======= -->
 
 
     <main id="main">
-
-
-
-
-
-
-
-
-
-
-
-
         </section><!-- End Clients Section -->
 
         <!-- ======= Contact Section ======= -->
@@ -207,12 +234,10 @@
 
             </div>
         </section><!-- End Contact Section -->
+    </main>
+    <!-- End #main -->
 
-    </main><!-- End #main -->
-
-    <div>
-        
-    </div>
+    
     <!-- ======= Footer ======= -->
     <footer id="footer">
 
