--- a/index.html
+++ b/index.html
@@ -128,7 +128,7 @@
                 <div class="col-md-12 col-lg-8">
                     <!-- <h1 style="color: white;">عيش التجربة !</h1> -->
                     <h1 style="color: white;">وُصلة تصلك بالمبدعين !</h1>
-                    <h2>منصة تصل صنّاع المحتوى الترفيهي إلى الموهوبين</h2>
+                    <h2>منصة تصل صنّاع المحتوى الترفيهي إلى المون</h2>
                 </div>
                 <div class="col-md-12 col-lg-4">
                     <img src="./assets/img/images/imgba.png" alt="">
