--- a/farad.html
+++ b/farad.html
@@ -13,6 +13,7 @@
     <link href="assets/img/images/waslah.png" rel="icon">
     <link href="assets/img/images/waslah.png" rel="apple-touch-icon">
 
+
     <!-- Google Fonts -->
     <link
         href="https://fonts.googleapis.com/css?family=Open+Sans:300,300i,400,400i,600,600i,700,700i|Roboto:300,300i,400,400i,500,500i,600,600i,700,700i|Poppins:300,300i,400,400i,500,500i,600,600i,700,700i"
@@ -97,11 +98,19 @@
             <nav id="navbar" class="navbar">
                 <ul>
                     <li><a class="nav-link scrollto active" href="#hero">الرئيسية</a></li>
-                    <li><a class="nav-link scrollto " href="#features">المميزات</a></li>
-                    <li><a class="nav-link scrollto" href="#opportunities">الخدمات</a></li>
-                    <li><a class="nav-link scrollto" href="#opportunities">المعايير</a></li>
+        <li class="nav-item dropdown">
+            <a class="nav-link dropdown-toggle" href="#" id="navbarDropdown" role="button" data-bs-toggle="dropdown"
+                aria-expanded="false">
+                المعايير
+            </a>
+            <ul class="dropdown-menu" aria-labelledby="navbarDropdown">
+                <li><a class="dropdown-item" href="/IFRS.html">IFRS</a></li>
+                <li><a class="dropdown-item" href="/IAS.html">IAS</a></li>
+            </ul>
+        </li>
                     <li><a class="nav-link scrollto" href="#services">الاستشارات</a></li>
                     <li><a class="nav-link scrollto" href="#contact">تواصل معنا</a></li>
+                    <li><a class="nav-link scrollto" href="#contact">من نحن</a></li>
                     <!-- <li><a class="nav-link scrollto" href="candidates.php">المرشحين</a></li> -->
                     <!-- <li><a class="nav-link scrollto" href="#clients">الشركاء</a></li>
                     <li><a class="nav-link scrollto" href="#services">الإعلانات</a></li>
@@ -137,52 +146,17 @@
                     <img src="/assets/css/Accountant-bro.png" width="350" height="350" alt="">
                 </div>
             </div>
-            <div class="d-flex">
-                <!-- <a href="#opportunities" class="btn-get-started scrollto">عرض الفرص</a> -->
-                <a href="signup.html" class="btn-get-started scrollto">سجل الآن</a>
-            </div>
+
         </div>
     </section>
     <!-- End Hero -->
 
 
-<!-- ======= Modael Section ======= -->
-    <div class="wrapper">
-        <i id="left" class="fa-solid fa-angle-left"></i>
-        <ul class="carousel">
-          <li class="Card">
-            <div class="img"><img src="images/img-1.jpg" alt="img" draggable="false"></div>
-            <h2>Blanche Pearson</h2>
-            <span>Sales Manager</span>
-          </li>
-          <li class="Card">
-            <div class="img"><img src="images/img-2.jpg" alt="img" draggable="false"></div>
-            <h2>Joenas Brauers</h2>
-            <span>Web Developer</span>
-          </li>
-          <li class="Card">
-            <div class="img"><img src="images/img-3.jpg" alt="img" draggable="false"></div>
-            <h2>Lariach French</h2>
-            <span>Online Teacher</span>
-          </li>
-          <li class="Card">
-            <div class="img"><img src="images/img-4.jpg" alt="img" draggable="false"></div>
-            <h2>James Khosravi</h2>
-            <span>Freelancer</span>
-          </li>
-          <li class="Card">
-            <div class="img"><img src="images/img-5.jpg" alt="img" draggable="false"></div>
-            <h2>Kristina Zasiadko</h2>
-            <span>Bank Manager</span>
-          </li>
-          <li class="Card">
-            <div class="img"><img src="images/img-6.jpg" alt="img" draggable="false"></div>
-            <h2>Donald Horton</h2>
-            <span>App Designer</span>
-          </li>
-        </ul>
-        <i id="right" class="fa-solid fa-angle-right"></i>
-      </div>
+<!-- ======= DropDown Section ======= -->
+<br><br>
+
+
+  <br><br>
 <!-- ======= END HERE ======= -->
 
 
