--- a/login.html
+++ b/login.html
@@ -41,7 +41,7 @@
     <style>
     #main {
 
-        background: linear-gradient(to bottom, #154DB3 0%, #8360D2 65%, #9463D6 100%);
+        background: #31696e;
         color: #fff;
     }
 
