--- a/signup.html
+++ b/signup.html
@@ -80,7 +80,7 @@
     <header id="header" class="d-flex align-items-center">
         <div class="container d-flex align-items-center justify-content-between">
 
-            <h1 class="logo"><a href="index.html">وُصلة</a></h1>
+            <h1 class="logo"><a href="index.html">معيار</a></h1>
             <!-- Uncomment below if you prefer to use an image logo -->
             <a href="index.html" class="logo"><img src="assets/img/logo.png" alt=""></a>
                         <nav id="navbar" class="navbar">
@@ -89,6 +89,8 @@
                     <li><a class="nav-link scrollto " href="index.html">الخدمات</a></li>
                     <li><a class="nav-link scrollto" href="index.html">المميزات</a></li>
                     <li><a class="nav-link scrollto" href="index.html">تواصل معنا</a></li>
+                    <!-- <li> <button type="button" class="btn btn-primary"><a href="/farad.html" style="color:#31696e;" class="nav-link scrollto">تسجيل</a></button>
+                    </li> -->
 
 
                     <!-- <li><a class="nav-link scrollto" href="candidates.php">المرشحين</a></li>
