--- a/farad.html
+++ b/farad.html
@@ -109,8 +109,8 @@
             </ul>
         </li>
                     <li><a class="nav-link scrollto" href="#services">الاستشارات</a></li>
-                    <li><a class="nav-link scrollto" href="#contact">تواصل معنا</a></li>
-                    <li><a class="nav-link scrollto" href="#contact">من نحن</a></li>
+                    <!-- <li><a class="nav-link scrollto" href="#contact">تواصل معنا</a></li> -->
+                    <!-- <li><a class="nav-link scrollto" href="#contact">من نحن</a></li> -->
                     <!-- <li><a class="nav-link scrollto" href="candidates.php">المرشحين</a></li> -->
                     <!-- <li><a class="nav-link scrollto" href="#clients">الشركاء</a></li>
                     <li><a class="nav-link scrollto" href="#services">الإعلانات</a></li>
