--- a/farad.html
+++ b/farad.html
@@ -143,7 +143,7 @@
                     <h2>منصة تصل صنّاع المحتوى الترفيهي إلى الموهوبين</h2>
                 </div>
                 <div class="col-md-12 col-lg-4">
-                    <img src="/assets/css/Accountant-bro.png" width="350" height="350" alt="">
+                    <img src="./assets/img/images/imgba.png" alt="">
                 </div>
             </div>
 
