--- a/index.html
+++ b/index.html
@@ -129,7 +129,7 @@
             <div class="row">
                 <div class="col-md-12 col-lg-8">
                     <!-- <h1 style="color: white;">عيش التجربة !</h1> -->
-                    <h1 style="color: white;">وُصلة تصلك بالمبدhhhhhhعين !</h1>
+                    <h1 style="color: white;">وُصلة تصلك بالمبدعين !</h1>
                     <h2>منصة تصل صنّاع المحتوى الترفيهي إلى اون</h2>
                 </div>
                 <div class="col-md-12 col-lg-4">
@@ -247,7 +247,19 @@
                     <h3>الخدمات</h3>
                 </div>
 
-
+                <div class="row">
+                    <div class="col-md-6 col-lg-4 d-flex align-items-stretch mb-5 mb-lg-0 justify-content-center">
+                        <div class="icon-box info-cards" data-aos="fade-up" data-aos-delay="100">
+                            <div class="icon"><i class="bx bx-notepad"></i></div>
+                            <h4 class="title">إنشاء محتوى ترفيهي بجودة عالية</h4>
+                        </div>
+                    </div>
+                    <div class="col-md-6 col-lg-4 d-flex align-items-stretch mb-5 mb-lg-0 justify-content-center">
+                        <div class="icon-box info-cards" data-aos="fade-up" data-aos-delay="200">
+                            <div class="icon"><i class="bx bx-bulb"></i></div>
+                            <h4 class="title">دعم الموهوبين وخلق فرص لهم</h4>
+                        </div>
+                    </div>
 
                     <div class="col-md-6 col-lg-4 d-flex align-items-stretch mb-5 mb-lg-0 justify-content-center">
                         <div class="icon-box info-cards" data-aos="fade-up" data-aos-delay="300">
