--- a/index.html
+++ b/index.html
@@ -129,7 +129,7 @@
             <div class="row">
                 <div class="col-md-12 col-lg-8">
                     <!-- <h1 style="color: white;">عيش التجربة !</h1> -->
-                    <h1 style="color: white;">وُصلة تصلك بالمبدhhhعين !</h1>
+                    <h1 style="color: white;">وُصلة تصلك بالمبدعين !</h1>
                     <h2>منصة تصل صنّاع المحتوى الترفيهي إلى اون</h2>
                 </div>
                 <div class="col-md-12 col-lg-4">
