--- a/farad.html
+++ b/farad.html
@@ -155,6 +155,83 @@
 <!-- ======= DropDown Section ======= -->
 <br><br>
 
+   <!-- ======= Services Section ======= -->
+   <section id="features" class="services">
+    <div class="container" data-aos="fade-up" style="margin-bottom: 50px;">
+
+        <div class="section-title">
+            <h3>المعايير</h3>
+        </div>
+
+        <div class="row">
+            <div class="col-md-6 col-lg-4 d-flex align-items-stretch mb-5 mb-lg-0 justify-content-center">
+                <div class="icon-box info-cards" data-aos="fade-up" data-aos-delay="100">
+                    <div class="icon"><i class="bx bx-notepad"></i></div>
+                    <h4 class="title">إنشاء محتوى ترفيهي بجودة عالية</h4>
+                </div>
+            </div>
+            <div class="col-md-6 col-lg-4 d-flex align-items-stretch mb-5 mb-lg-0 justify-content-center">
+                <div class="icon-box info-cards" data-aos="fade-up" data-aos-delay="200">
+                    <div class="icon"><i class="bx bx-bulb"></i></div>
+                    <h4 class="title">دعم الموهوبين وخلق فرص لهم</h4>
+                </div>
+            </div>
+
+            <div class="col-md-6 col-lg-4 d-flex align-items-stretch mb-5 mb-lg-0 justify-content-center">
+                <div class="icon-box info-cards" data-aos="fade-up" data-aos-delay="300">
+                    <div class="icon"><i class="bx bx-file"></i></div>
+                    <h4 class="title">تحفيز التعاون والشركة بين صناع المحتوى والموهوبين</h4>
+                </div>
+            </div>
+
+        </div>
+
+    </div>
+    <div class="text-center" >
+        <button type="button" class="btn btn-info" style="background-color: #31696e;"> <a href="signup.html" class="btn-get-started scrollto" id="textm">مشاهدة المعايير</a></button>
+      </div>
+
+    </div>
+</section><!-- End Services Section -->
+ 
+   <!-- ======= Services Section ======= -->
+   <section id="features" class="services">
+    <div class="container" data-aos="fade-up" style="margin-bottom: 50px;">
+
+        <div class="section-title">
+            <h3>الاستشارات</h3>
+        </div>
+
+        <div class="row">
+            <div class="col-md-6 col-lg-4 d-flex align-items-stretch mb-5 mb-lg-0 justify-content-center">
+                <div class="icon-box info-cards" data-aos="fade-up" data-aos-delay="100">
+                    <div class="icon"><i class="bx bx-notepad"></i></div>
+                    <h4 class="title">إنشاء محتوى ترفيهي بجودة عالية</h4>
+                </div>
+            </div>
+            <div class="col-md-6 col-lg-4 d-flex align-items-stretch mb-5 mb-lg-0 justify-content-center">
+                <div class="icon-box info-cards" data-aos="fade-up" data-aos-delay="200">
+                    <div class="icon"><i class="bx bx-bulb"></i></div>
+                    <h4 class="title">دعم الموهوبين وخلق فرص لهم</h4>
+                </div>
+            </div>
+
+            <div class="col-md-6 col-lg-4 d-flex align-items-stretch mb-5 mb-lg-0 justify-content-center">
+                <div class="icon-box info-cards" data-aos="fade-up" data-aos-delay="300">
+                    <div class="icon"><i class="bx bx-file"></i></div>
+                    <h4 class="title">تحفيز التعاون والشركة بين صناع المحتوى والموهوبين</h4>
+                </div>
+            </div>
+
+        </div>
+
+    </div>
+    <div class="text-center" >
+        <button type="button" class="btn btn-info" style="background-color: #31696e;"> <a href="signup.html" class="btn-get-started scrollto" id="textm">طلب استشارة</a></button>
+      </div>
+
+    </div>
+</section><!-- End Services Section -->
 
   <br><br>
 <!-- ======= END HERE ======= -->
