--- a/profile.html
+++ b/profile.html
@@ -89,27 +89,27 @@
     <header id="header" class="d-flex align-items-center">
         <div class="container d-flex align-items-center justify-content-between">
 
-            <h1 class="logo"><a href="index.html">وُصلة</a></h1>
+            <h1 class="logo"><a href="index.php">وُصلة</a></h1>
             <!-- Uncomment below if you prefer to use an image logo -->
             <!-- <a href="index.html" class="logo"><img src="assets/img/logo.png" alt=""></a>-->
 
             <nav id="navbar" class="navbar">
                 <ul>
-                    <li><a class="nav-link scrollto active" href="homepage.html">الرئيسية</a></li>
-                    <li><a class="nav-link scrollto " href="homepage.html">المميزات</a></li>
-                    <li><a class="nav-link scrollto" href="homepage.html">الفرص</a></li>
-                    <li><a class="nav-link scrollto" href="homepage.html">الإعلانات</a></li>
-                    <li><a class="nav-link scrollto" href="homepage.html">المرشحين</a></li>
-                    <li><a class="nav-link scrollto" href="homepage.html">الشركاء</a></li>
-                    <li><a class="nav-link scrollto" href="homepage.html">تواصل معنا</a></li>
+                    <li><a class="nav-link scrollto active" href="index.php">الرئيسية</a></li>
+                    <li><a class="nav-link scrollto " href="index.php">المميزات</a></li>
+                    <li><a class="nav-link scrollto" href="index.php">الفرص</a></li>
+                    <li><a class="nav-link scrollto" href="index.php">الإعلانات</a></li>
+                    <li><a class="nav-link scrollto" href="candidates.php">المرشحين</a></li>
+                    <li><a class="nav-link scrollto" href="index.php">الشركاء</a></li>
+                    <li><a class="nav-link scrollto" href="index.php">تواصل معنا</a></li>
                     <li class="nav-item dropdown">
                         <a class="nav-link dropdown-toggle" href="#" id="navbarDropdownMenuLink" role="button"
                             data-bs-toggle="dropdown" aria-expanded="false">
                             <img src="./assets/img/images/person.png" alt="" style="width: 32px;">
                         </a>
                         <ul class="dropdown-menu" aria-labelledby="navbarDropdownMenuLink">
-                            <li><a class="dropdown-item" href="profile.html">الملف الشخصي</a></li>
-                            <li><a class="dropdown-item" href="index.html" style="color: red;">تسجيل خروج</a></li>
+                            <li><a class="dropdown-item" href="profile.php">الملف الشخصي</a></li>
+                            <li><a class="dropdown-item" href="set_logout.php" style="color: red;">تسجيل خروج</a></li>
                         </ul>
                     </li>
                 </ul>
