--- a/IFRS.html
+++ b/IFRS.html
@@ -13,7 +13,6 @@
     <link href="assets/img/images/waslah.png" rel="icon">
     <link href="assets/img/images/waslah.png" rel="apple-touch-icon">
 
-
     <!-- Google Fonts -->
     <link
         href="https://fonts.googleapis.com/css?family=Open+Sans:300,300i,400,400i,600,600i,700,700i|Roboto:300,300i,400,400i,500,500i,600,600i,700,700i|Poppins:300,300i,400,400i,500,500i,600,600i,700,700i"
@@ -30,6 +29,14 @@
 
     <!-- Template Main CSS File -->
     <link href="assets/css/style2.css" rel="stylesheet">
+
+    <!-- =======================================================
+  * Template Name: BizLand
+  * Updated: Mar 10 2023 with Bootstrap v5.2.3
+  * Template URL: https://bootstrapmade.com/bizland-bootstrap-business-template/
+  * Author: BootstrapMade.com
+  * License: https://bootstrapmade.com/license/
+  ======================================================== -->
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <style>
         body {
@@ -76,6 +83,7 @@
         }
     </style>
 </head>
+
 <body>
 
     <!-- ======= Header ======= -->
@@ -92,6 +100,17 @@
                     <li class="nav-item dropdown">
                         <a class="nav-link dropdown-toggle" href="#" id="navbarDropdown" role="button"
                             data-bs-toggle="dropdown" aria-expanded="false">
+                            الخدمات
+                        </a>
+                        <ul class="dropdown-menu" aria-labelledby="navbarDropdown">
+                            <li><a class="dropdown-item" href="/IFRS.html">الاستشارات</a></li>
+                            <li><a class="dropdown-item" href="/IAS.html">تقييم تجربه المستخدم</a></li>
+                        </ul>
+                    </li>
+
+                    <li class="nav-item dropdown">
+                        <a class="nav-link dropdown-toggle" href="#" id="navbarDropdown" role="button"
+                            data-bs-toggle="dropdown" aria-expanded="false">
                             المعايير
                         </a>
                         <ul class="dropdown-menu" aria-labelledby="navbarDropdown">
@@ -99,101 +118,112 @@
                             <li><a class="dropdown-item" href="/IAS.html">IAS</a></li>
                         </ul>
                     </li>
-                    <li><a class="nav-link scrollto" href="#services">الاستشارات</a></li>
-                    <li><a class="nav-link scrollto" href="#contact">تواصل معنا</a></li>
-                    <li><a class="nav-link scrollto" href="#contact">من نحن</a></li>
-                    </li>
-                </ul>
-                <i class="bi bi-list mobile-nav-toggle"></i>
-            </nav>
-            <!-- end navbar -->
+
+                    <li><a class="nav-link scrollto" href="#opportunities">تواصل معنا</a></li>
+
+
+                    <i class="bi bi-list mobile-nav-toggle"></i>
+            </nav><!-- .navbar -->
+
         </div>
     </header>
-    
     <!-- End Header -->
 
-<div class="row">
-    <div class="col-sm-6">
-        <div class="card">
-            <div class="card-body">
-                <h5 class="card-title">Special title treatment</h5>
-                <p class="card-text">With supporting text below as a natural lead-in to additional content.</p>
-                <a href="#" class="btn btn-primary">Go somewhere</a>
-            </div>
-        </div>
-    </div>
-    <div class="col-sm-6">
-        <div class="card">
-            <div class="card-body">
-                <h5 class="card-title">Special title treatment</h5>
-                <p class="card-text">With supporting text below as a natural lead-in to additional content.</p>
-                <a href="#" class="btn btn-primary">Go somewhere</a>
-            </div>
-        </div>
-    </div>
-</div>
-<div class="row">
-    <div class="col-sm-6">
-        <div class="card">
-            <div class="card-body">
-                <h5 class="card-title">Special title treatment</h5>
-                <p class="card-text">With supporting text below as a natural lead-in to additional content.</p>
-                <a href="#" class="btn btn-primary">Go somewhere</a>
-            </div>
-        </div>
-    </div>
-    <div class="col-sm-6">
-        <div class="card">
-            <div class="card-body">
-                <h5 class="card-title">Special title treatment</h5>
-                <p class="card-text">With supporting text below as a natural lead-in to additional content.</p>
-                <a href="#" class="btn btn-primary">Go somewhere</a>
-            </div>
-        </div>
-    </div>
-</div>
 
-<div class="row">
-    <div class="col-sm-6">
-        <div class="card">
-            <div class="card-body">
-                <h5 class="card-title">Special title treatment</h5>
-                <p class="card-text">With supporting text below as a natural lead-in to additional content.</p>
-                <a href="#" class="btn btn-primary">Go somewhere</a>
-            </div>
-        </div>
-    </div>
-    <div class="col-sm-6">
-        <div class="card">
-            <div class="card-body">
-                <h5 class="card-title">Special title treatment</h5>
-                <p class="card-text">With supporting text below as a natural lead-in to additional content.</p>
-                <a href="#" class="btn btn-primary">Go somewhere</a>
-            </div>
-        </div>
-    </div>
-</div>
+    <br> <br> <br> <br>
+    <br> <br> <br> <br>
+    <section id="features" class="services">
+        <div class="container" data-aos="fade-up">
 
-<div class="row">
-    <div class="col-sm-6">
-        <div class="card">
-            <div class="card-body">
-                <h5 class="card-title">Special title treatment</h5>
-                <p class="card-text">With supporting text below as a natural lead-in to additional content.</p>
-                <a href="#" class="btn btn-primary">Go somewhere</a>
+
+            <div class="row">
+                <div class="col-md-6 col-lg-4 d-flex align-items-stretch mb-5 mb-lg-0 justify-content-center">
+                    <div class="icon-box info-cards" data-aos="fade-up" data-aos-delay="100">
+                        <h4 class="title">IFRS 1 First-time Adoption of International Financial Reporting Standards</h4>
+                        <hr>
+                        <a href="#" class="card-link">Read More</a>
+                    </div>
+                    
+                </div>
+
+                <div class="col-md-6 col-lg-4 d-flex align-items-stretch mb-5 mb-lg-0 justify-content-center">
+                    <div class="icon-box info-cards" data-aos="fade-up" data-aos-delay="200">
+
+                        <h4 class="title">IFRS 3 Share-based</h4>
+                        <br><br><br><br>
+                        <hr> 
+                        <a href="#" class="card-link">Read More</a>
+
+                    </div>
+                </div>
+
+                <div class="col-md-6 col-lg-4 d-flex align-items-stretch mb-5 mb-lg-0 justify-content-center">
+                    <div class="icon-box info-cards" data-aos="fade-up" data-aos-delay="300">
+
+                        <h4 class="title">IFRS 3 Business Combinations</h4> <a href=""></a>
+                        <br><br><br>
+                        <hr> 
+                        <a href="#" class="card-link">Read More</a>
+                    </div>
+                </div>
+
             </div>
+
         </div>
-    </div>
-    <div class="col-sm-6">
-        <div class="card">
-            <div class="card-body">
-                <h5 class="card-title">Special title treatment</h5>
-                <p class="card-text">With supporting text below as a natural lead-in to additional content.</p>
-                <a href="#" class="btn btn-primary">Go somewhere</a>
+
+        </div>
+    </section>
+    <!-- End Services Section -->
+
+
+    <!-- ======= Features Section ======= -->
+
+    <section id="features" class="services">
+        <div class="container" data-aos="fade-up">
+
+            <div class="row">
+                <div class="col-md-6 col-lg-4 d-flex align-items-stretch mb-5 mb-lg-0 justify-content-center">
+
+                    <div class="icon-box info-cards" data-aos="fade-up" data-aos-delay="100">
+
+
+
+                        <h4 class="title">IFRS 5 Non-current Assets Held for Sale and Discontinued Operation</h4>
+                        <br><br><br>
+                        <hr> 
+                        <a href="#" class="card-link">Read More</a>
+                    </div>
+                </div>
+                <div class="col-md-6 col-lg-4 d-flex align-items-stretch mb-5 mb-lg-0 justify-content-center">
+                    <div class="icon-box info-cards" data-aos="fade-up" data-aos-delay="200">
+
+                        <h4 class="title">IFRS 8 Business Combinations</h4>
+                        <br><br><br><br><br>
+                        <hr> 
+                        <a href="#" class="card-link">Read More</a>
+                    </div>
+                </div>
+
+                <div class="col-md-6 col-lg-4 d-flex align-items-stretch mb-5 mb-lg-0 justify-content-center">
+                    <div class="icon-box info-cards" data-aos="fade-up" data-aos-delay="300">
+
+                        <h4 class="title">IFRS 9 Financial Insrument, Part1: Classification and Measurement</h4>
+                        <br><br><br>
+                        <hr> 
+                        <a href="#" class="card-link">Read More</a>
+                    </div>
+                </div>
+
             </div>
+
         </div>
-    </div>
-</div>
+
+        </div>
+    </section><!-- End Features Section -->
+
+
+
+
 
 
     <!-- Vendor JS Files -->
