--- a/IFRS.html
+++ b/IFRS.html
@@ -34,6 +34,7 @@
     <style>
         body {
             font-family: Arial, Helvetica, sans-serif;
+            background-color: #31696e;
         }
 
         .flip-card {
@@ -100,8 +101,6 @@
                         </ul>
                     </li>
                     <li><a class="nav-link scrollto" href="#services">الاستشارات</a></li>
-                    <li><a class="nav-link scrollto" href="#contact">تواصل معنا</a></li>
-                    <li><a class="nav-link scrollto" href="#contact">من نحن</a></li>
                     </li>
                 </ul>
                 <i class="bi bi-list mobile-nav-toggle"></i>
