--- a/IFRS.html
+++ b/IFRS.html
@@ -30,13 +30,6 @@
     <!-- Template Main CSS File -->
     <link href="assets/css/style2.css" rel="stylesheet">
 
-    <!-- =======================================================
-  * Template Name: BizLand
-  * Updated: Mar 10 2023 with Bootstrap v5.2.3
-  * Template URL: https://bootstrapmade.com/bizland-bootstrap-business-template/
-  * Author: BootstrapMade.com
-  * License: https://bootstrapmade.com/license/
-  ======================================================== -->
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <style>
         body {
@@ -104,7 +97,7 @@
                             الخدمات
                         </a>
                         <ul class="dropdown-menu" aria-labelledby="navbarDropdown">
-                            <li><a class="dropdown-item" href="/IFRS.html">الاستشارات</a></li>
+                        
                             <li><a class="dropdown-item" href="/IAS.html">تقييم تجربه المستخدم</a></li>
                         </ul>
                     </li>
@@ -115,11 +108,11 @@
                             المعايير
                         </a>
                         <ul class="dropdown-menu" aria-labelledby="navbarDropdown">
+                            <li><a class="dropdown-item" href="/IFRS.html">IFRS SMEs</a></li> 
                             <li><a class="dropdown-item" href="/IFRS.html">IFRS</a></li>
                             <li><a class="dropdown-item" href="/IAS.html">IAS</a></li>
                         </ul>
                     </li>
-                    <li><a class="nav-link scrollto" href="#services">الاستشارات</a></li>
                     <li><a class="nav-link scrollto" href="#contact">تواصل معنا</a></li>
                     <li><a class="nav-link scrollto" href="#contact">من نحن</a></li>
                     </li>
@@ -141,9 +134,10 @@
             <div class="row">
                 <div class="col-md-6 col-lg-4 d-flex align-items-stretch mb-5 mb-lg-0 justify-content-center">
                     <div class="icon-box info-cards" data-aos="fade-up" data-aos-delay="100">
-                        <h4 class="title">IFRS 1 First-time Adoption of International Financial Reporting Standards</h4>
+                        <h4 class="title">معيار المخزون</h4>
+                        <br><br><br><br>
                         <hr>
-                        <a href="#" class="card-link">Read More</a>
+                        <a href="/ifrsM.html" class="card-link">تفاصيل اكثر</a>
                     </div>
                     
                 </div>
@@ -151,10 +145,10 @@
                 <div class="col-md-6 col-lg-4 d-flex align-items-stretch mb-5 mb-lg-0 justify-content-center">
                     <div class="icon-box info-cards" data-aos="fade-up" data-aos-delay="200">
 
-                        <h4 class="title">IFRS 3 Share-based</h4>
-                        <br><br><br><br>
+                        <h4 class="title">معيار المخصصات والاحتمالات</h4>
+                        <br><br><br>
                         <hr> 
-                        <a href="#" class="card-link">Read More</a>
+                        <a href="/ifrsM.html" class="card-link">تفاصيل اكثر</a>
 
                     </div>
                 </div>
@@ -162,10 +156,10 @@
                 <div class="col-md-6 col-lg-4 d-flex align-items-stretch mb-5 mb-lg-0 justify-content-center">
                     <div class="icon-box info-cards" data-aos="fade-up" data-aos-delay="300">
 
-                        <h4 class="title">IFRS 3 Business Combinations</h4> <a href=""></a>
+                        <h4 class="title">معيار الادوات المالية الاساسية</h4> <a href=""></a>
                         <br><br><br>
                         <hr> 
-                        <a href="#" class="card-link">Read More</a>
+                        <a href="/ifrsM.html" class="card-link">تفاصيل اكثر</a>
                     </div>
                 </div>
 
@@ -193,7 +187,7 @@
                         <h4 class="title">IFRS 5 Non-current Assets Held for Sale and Discontinued Operation</h4>
                         <br><br><br>
                         <hr> 
-                        <a href="#" class="card-link">Read More</a>
+                        <a href="/ifrsM.html" class="card-link">Read More</a>
                     </div>
                 </div>
                 <div class="col-md-6 col-lg-4 d-flex align-items-stretch mb-5 mb-lg-0 justify-content-center">
@@ -202,7 +196,7 @@
                         <h4 class="title">IFRS 8 Business Combinations</h4>
                         <br><br><br><br><br>
                         <hr> 
-                        <a href="#" class="card-link">Read More</a>
+                        <a href="/ifrsM.html" class="card-link">Read More</a>
                     </div>
                 </div>
 
@@ -212,7 +206,7 @@
                         <h4 class="title">IFRS 9 Financial Insrument, Part1: Classification and Measurement</h4>
                         <br><br><br>
                         <hr> 
-                        <a href="#" class="card-link">Read More</a>
+                        <a href="/ifrsM.html" class="card-link">Read More</a>
                     </div>
                 </div>
 
@@ -222,10 +216,6 @@
 
         </div>
     </section><!-- End Features Section -->
-
-
-
-
 
 
     <!-- Vendor JS Files -->
