--- a/farad.html
+++ b/farad.html
@@ -130,7 +130,7 @@
                 </a>
                 <ul class="dropdown-menu" aria-labelledby="navbarDropdownMenuLink">
                     <li><a class="dropdown-item" href="profile.html">الملف الشخصي</a></li>
-                    <li><a class="dropdown-item" href="set_logout.php" style="color: red;">تسجيل خروج</a></li>
+                    <li><a class="dropdown-item" href="index.html" style="color: red;">تسجيل خروج</a></li>
                 </ul>
             </li>
             
@@ -237,7 +237,7 @@
 
     </div>
     <div class="text-center" >
-        <button type="button" class="btn btn-info" style="background-color: #31696e;"> <a href="signup.html" class="btn-get-started scrollto" id="textm">طلب استشارة</a></button>
+        <button type="button" class="btn btn-info" style="background-color: #31696e;"> <a href="consultant.html" class="btn-get-started scrollto" id="textm">اختيار مستشار</a></button>
       </div>
 
     </div>
@@ -307,7 +307,7 @@
                 <div class="container py-4">
                     <div class="row">
                         <div class="col-lg-12 text-center">
-                            جميع الحقوق محفوظة &copy;<strong><span>وُصلة</span></strong>
+                            جميع الحقوق محفوظة لمعيار&copy;<strong><span> 2023</span></strong>
                         </div>
                     </div>
                 </div>
