--- a/index.html
+++ b/index.html
@@ -97,9 +97,9 @@
             <nav id="navbar" class="navbar">
                 <ul>
                     <li><a class="nav-link scrollto active" href="#hero">الرئيسية</a></li>
-                    <li><a class="nav-link scrollto " href="#features">الخدمات</a></li>
-                    <li><a class="nav-link scrollto" href="#opportunities">المميزات</a></li>
-                    <li><a class="nav-link scrollto" href="#opportunities">تواصل معنا</a></li>
+                    <li><a class="nav-link scrollto " href="#Services">الخدمات</a></li>
+                    <li><a class="nav-link scrollto" href="#features">المميزات</a></li>
+                    <li><a class="nav-link scrollto" href="#contact">تواصل معنا</a></li>
 
                     <!-- <li><a class="nav-link scrollto" href="candidates.php">المرشحين</a></li> -->
                     <!-- <li><a class="nav-link scrollto" href="#clients">الشركاء</a></li>
@@ -162,8 +162,7 @@
                                             <h4 class="title">من نحن</h4>
                                         </div>
                                         <div class="flip-card-back">
-                                            <p>منصة وصلة تهدف إلى توفير وسيلة سهلة لصناع المحتوى الترفيهي
-                                                للعثور على المواهب والمهارات التي يحتاجونها لانتاج محتوى ذو جودة عالية
+                                            <p>منصة معيار تختص بعرض و توضيح المعايير المالية والمحاسبية وكذلك اللوائح والانظمة المحلية بشكل محدث, وتقديم خدمات تقنية محاسبية لضمان جودة الانظمة المالية المستخدمة 
                                             </p>
                                         </div>
                                     </div>
@@ -185,8 +184,8 @@
                                             <h4 class="title"> <span class="flip-flop">الرؤية</span></h4>
                                         </div>
                                         <div class="flip-card-back">
-                                            <p> توفير بيئة محفزة للمواهب المحلية في صناعة الترفيه وتوفير الدعم
-                                                وربطهم بصناع المحتوى الترفيهي,ونسعى إلى تحقيق التعاون والشراكة بينهم</p>
+                                            <p> نسعى أن تكون منصة معيار المرجع الأول والموثوق به للمعايير المالية واللوائح والانظمة في المملكة 
+                                            </p>
                                         </div>
                                     </div>
                                 </div>
@@ -224,7 +223,8 @@
                                             <h4 class="title">الأهداف</h4>
                                         </div>
                                         <div class="flip-card-back">
-                                            <p>توفير فرص العمل للكوادر السعودية و تعزيز الاقتصاد المحلي
+                                            <p>تالتاكد من تطبيق كافة المنشات الصغيرة والمتوسطة للمعايير الخاصة بهم بدقة وكفاءة عالية 
+
 
                                             </p>
                                         </div>
@@ -240,11 +240,11 @@
         </section><!-- End Featured Services Section -->
 
         <!-- ======= Services Section ======= -->
-        <section id="features" class="services">
+        <section id="Services" class="services">
             <div class="container" data-aos="fade-up">
 
                 <div class="section-title">
-                    <h3>المميزات</h3>
+                    <h3>الخدمات</h3>
                 </div>
 
                 <div class="row">
@@ -282,7 +282,7 @@
             <div class="container" data-aos="fade-up">
 
                 <div class="section-title">
-                    <h3>الخدمات</h3>
+                    <h3>المميزات</h3>
                 </div>
 
                 <div class="row">
@@ -446,7 +446,7 @@
 
         <!-- ======= Clients Section ======= -->
 
-        <section id="clients" class="clients section-bg">
+        <!-- <section id="clients" class="clients section-bg">
             <div class="container" data-aos="zoom-in">
                 <div class="section-title">
                     <h3>الشركاء</h3>
@@ -482,7 +482,7 @@
                 </div>
 
             </div>
-        </section><!-- End Clients Section -->
+        </section>End Clients Section -->
 
         <!-- ======= Contact Section ======= -->
         <section id="contact" class="contact">
@@ -495,7 +495,7 @@
                 <div class="row" data-aos="fade-up" data-aos-delay="100">
                     <div class="col-lg-3">
                         <div class="info-box mb-4">
-                            <a href="#">
+                            <a href="https://twitter.com/search-advanced?lang=ar">
                                 <i class='bx bxl-twitter'></i>
                             </a>
                         </div>
@@ -503,7 +503,7 @@
 
                     <div class="col-lg-3">
                         <div class="info-box mb-4">
-                            <a href="#">
+                            <a href="https://www.instagram.com/">
                                 <i class='bx bxl-instagram'></i>
                             </a>
                         </div>
@@ -511,7 +511,7 @@
 
                     <div class="col-lg-3 col-md-6">
                         <div class="info-box  mb-4">
-                            <a href="#">
+                            <a href="mailto:mieyar@gmail.com">
                                 <i class="bx bx-envelope"></i>
                             </a>
                         </div>
@@ -519,7 +519,7 @@
 
                     <div class="col-lg-3 col-md-6">
                         <div class="info-box  mb-4">
-                            <a href="#">
+                            <a href="https://www.linkedin.com/login/ar">
                                 <i class='bx bxl-linkedin-square'></i>
                             </a>
                         </div>
@@ -540,7 +540,7 @@
                 <div class="container py-4">
                     <div class="row">
                         <div class="col-lg-12 text-center">
-                            جميع الحقوق محفوظة &copy;<strong><span>وُصلة</span></strong>
+                             جميع الحقوق محفوظة لمعيار&copy;<strong><span> 2023</span></strong>
                         </div>
                     </div>
                 </div>
