--- a/signup.html
+++ b/signup.html
@@ -205,8 +205,10 @@
                                     <input type="text" class="form-control" name="phone" id="phone"
                                         placeholder="أدخل السجل التجاري">
                                 </div> 
-                                <div class="dropdown" >
+                                <div class="mb-3">
                                     <label for="re_password">القطاع</label>
+
+                                <div class="dropdown" >
                                     <button class="btn btn-secondary dropdown-toggle" type="button" data-bs-toggle="dropdown" aria-expanded="false" style="width: 27.5rem;">
                                       القطاع الخاص بمنشائتك
                                     </button>
@@ -216,6 +218,7 @@
                                       <li><a class="dropdown-item" href="#">Something else here</a></li>
                                     </ul>
                                   </div>
+                                </div>
                                 <div class="mb-3">
                                     <label for="password">كلمة المرور</label>
                                     <input type="password" class="form-control" name="password" id="password"
@@ -284,7 +287,7 @@
                 <div class="container py-4">
                     <div class="row">
                         <div class="col-lg-12 text-center">
-                            جميع الحقوق محفوظة &copy;<strong><span>وُصلة</span></strong>
+                            جميع الحقوق محفوظة لمعيار&copy;<strong><span> 2023</span></strong>
                         </div>
                     </div>
                 </div>
