--- a/farad.html
+++ b/farad.html
@@ -119,7 +119,7 @@
             </a>
             <ul class="dropdown-menu" aria-labelledby="navbarDropdown">
                 <li><a class="dropdown-item" href="/consultant.html">الاستشارات</a></li>
-                <li><a class="dropdown-item" href="/IAS.html">IAS</a></li>
+                <li><a class="dropdown-item" href="/IAS.html">تقييم الأداء</a></li>
                 
             </ul>
             
