--- a/index.html
+++ b/index.html
@@ -204,8 +204,7 @@
                                             <h4 class="title">الرسالة</h4>
                                         </div>
                                         <div class="flip-card-back">
-                                            <p> أن نكون المنصة الرائدة في تطوير صناعة الترفيه في المملكة وذلك من خلال
-                                                توفير وسيلة سهلة لصناع المحتوى الترفيهي للوصول للموهوبين</p>
+                                            <p> تأسيس منصة الكترونية تخدم المنشات المتوسطة والصغيرة في فهم وتطبيق المعايير المالية الخاصة بهم بشكل محدث وواضح وتحسين مستوى كفاءة وجودة البرامج المحاسبية</p>
                                         </div>
                                     </div>
                                 </div>
@@ -223,7 +222,7 @@
                                             <h4 class="title">الأهداف</h4>
                                         </div>
                                         <div class="flip-card-back">
-                                            <p>تالتاكد من تطبيق كافة المنشات الصغيرة والمتوسطة للمعايير الخاصة بهم بدقة وكفاءة عالية 
+                                            <p>التاكد من تطبيق كافة المنشات الصغيرة والمتوسطة للمعايير الخاصة بهم بدقة وكفاءة عالية 
 
 
                                             </p>
@@ -250,21 +249,28 @@
                 <div class="row">
                     <div class="col-md-6 col-lg-4 d-flex align-items-stretch mb-5 mb-lg-0 justify-content-center">
                         <div class="icon-box info-cards" data-aos="fade-up" data-aos-delay="100">
-                            <div class="icon"><i class="bx bx-notepad"></i></div>
-                            <h4 class="title">إنشاء محتوى ترفيهي بجودة عالية</h4>
+                            <div class="icon">
+                                
+                                <!-- <i class="bx bx-notepad"></i> -->
+                            </div>
+                            <h4 class="title">الاستشارات في المعايير  جزء  مربوط بالذكاء الصناعي 
+                            </h4>
                         </div>
                     </div>
                     <div class="col-md-6 col-lg-4 d-flex align-items-stretch mb-5 mb-lg-0 justify-content-center">
                         <div class="icon-box info-cards" data-aos="fade-up" data-aos-delay="200">
                             <div class="icon"><i class="bx bx-bulb"></i></div>
-                            <h4 class="title">دعم الموهوبين وخلق فرص لهم</h4>
+                            <h4 class="title">التقييم والرقابه على جوده البرامج المحاسبيه 
+ 
+                            </h4>
                         </div>
                     </div>
 
                     <div class="col-md-6 col-lg-4 d-flex align-items-stretch mb-5 mb-lg-0 justify-content-center">
                         <div class="icon-box info-cards" data-aos="fade-up" data-aos-delay="300">
                             <div class="icon"><i class="bx bx-file"></i></div>
-                            <h4 class="title">تحفيز التعاون والشركة بين صناع المحتوى والموهوبين</h4>
+                            <h4 class="title">تقييم الاداء 
+                            </h4>
                         </div>
                     </div>
 
