--- a/login.html
+++ b/login.html
@@ -41,7 +41,7 @@
     <style>
     #main {
 
-        background: #31696e;
+        background: linear-gradient(to bottom, #0e5c50 0%, #196b5c 65%, #368777 100%);
         color: #fff;
     }
 
@@ -128,7 +128,7 @@
 
                     <br>
 
-                    <form action="homepage.html" method="post" class="shadow p-4">
+                    <form action="farad.html" method="post" class="shadow p-4">
                         <div class="mb-3">
                             <label for="email">البريد الالكتروني</label>
                             <input type="text" class="form-control" name="email" id="email"
@@ -140,7 +140,7 @@
                                 placeholder="أدخل كلمة المرور" required>
                         </div>
                         <div class="mb-3 text-center">
-                           <button type="submit" class="btn btn-primary"> </button>
+                           <button type="submit" class="btn btn-primary">تسجيل دخول </button>
                         </div>
 
                         <label for="have_not_account">ليس لديك حساب ؟</label> <a href="signup.html">إنشاء جديد</a>
