--- a/signup.html
+++ b/signup.html
@@ -41,7 +41,7 @@
     <style>
     #main {
 
-        background: #31696e;
+        background: linear-gradient(to bottom, #0e5c50 0%, #196b5c 65%, #368777 100%);
         color: #fff;
     }
 
