--- a/farad.html
+++ b/farad.html
@@ -148,9 +148,10 @@
         <div class="container" data-aos="zoom-out" data-aos-delay="100">
             <div class="row">
                 <div class="col-md-12 col-lg-8">
-                    <!-- <h1 style="color: white;">عيش التجربة !</h1> -->
-                    <h1 style="color: white;">وُصلة تصلك بالمبدعين !</h1>
-                    <h2>منصة تصل صنّاع المحتوى الترفيهي إلى الموهوبين</h2>
+                    <h1 style="color: white; font-size: 40px;">  منصة معيار</h1>
+                    <h2 style="font-size: 20px; margin-top: 20px;">المنصة الرقمية الأولى لرفع كفاءه وجودة 
+                         التطبيق المحاسبي الصحيح 
+                        <br>  باستخدام حلول تقنية وخدمات استشارية .</h2>
                 </div>
                 <div class="col-md-12 col-lg-4">
                     <img src="./assets/img/images/imgba.png" alt="">
@@ -176,20 +177,20 @@
         <div class="row">
             <div class="col-md-6 col-lg-4 d-flex align-items-stretch mb-5 mb-lg-0 justify-content-center">
                 <div class="icon-box info-cards" data-aos="fade-up" data-aos-delay="100">
-                    <div class="icon"><i class="bx bx-notepad"></i></div>
+                    <!-- <div class="icon"><i class="bx bx-notepad"></i></div> -->
                     <h4 class="title">إنشاء محتوى ترفيهي بجودة عالية</h4>
                 </div>
             </div>
             <div class="col-md-6 col-lg-4 d-flex align-items-stretch mb-5 mb-lg-0 justify-content-center">
                 <div class="icon-box info-cards" data-aos="fade-up" data-aos-delay="200">
-                    <div class="icon"><i class="bx bx-bulb"></i></div>
+                    <!-- <div class="icon"><i class="bx bx-bulb"></i></div> -->
                     <h4 class="title">دعم الموهوبين وخلق فرص لهم</h4>
                 </div>
             </div>
 
             <div class="col-md-6 col-lg-4 d-flex align-items-stretch mb-5 mb-lg-0 justify-content-center">
                 <div class="icon-box info-cards" data-aos="fade-up" data-aos-delay="300">
-                    <div class="icon"><i class="bx bx-file"></i></div>
+                    <!-- <div class="icon"><i class="bx bx-file"></i></div> -->
                     <h4 class="title">تحفيز التعاون والشركة بين صناع المحتوى والموهوبين</h4>
                 </div>
             </div>
@@ -205,7 +206,7 @@
 </section><!-- End Services Section -->
  
    <!-- ======= Services Section ======= -->
-   <section id="features" class="services">
+   <section id="features" class="services" style="background-color: rgb(244, 244, 244);">
     <div class="container" data-aos="fade-up" style="margin-bottom: 50px;">
 
         <div class="section-title">
@@ -215,20 +216,20 @@
         <div class="row">
             <div class="col-md-6 col-lg-4 d-flex align-items-stretch mb-5 mb-lg-0 justify-content-center">
                 <div class="icon-box info-cards" data-aos="fade-up" data-aos-delay="100">
-                    <div class="icon"><i class="bx bx-notepad"></i></div>
+                    <!-- <div class="icon"><i class="bx bx-notepad"></i></div> -->
                     <h4 class="title">إنشاء محتوى ترفيهي بجودة عالية</h4>
                 </div>
             </div>
             <div class="col-md-6 col-lg-4 d-flex align-items-stretch mb-5 mb-lg-0 justify-content-center">
                 <div class="icon-box info-cards" data-aos="fade-up" data-aos-delay="200">
-                    <div class="icon"><i class="bx bx-bulb"></i></div>
+                    <!-- <div class="icon"><i class="bx bx-bulb"></i></div> -->
                     <h4 class="title">دعم الموهوبين وخلق فرص لهم</h4>
                 </div>
             </div>
 
             <div class="col-md-6 col-lg-4 d-flex align-items-stretch mb-5 mb-lg-0 justify-content-center">
                 <div class="icon-box info-cards" data-aos="fade-up" data-aos-delay="300">
-                    <div class="icon"><i class="bx bx-file"></i></div>
+                    <!-- <div class="icon"><i class="bx bx-file"></i></div> -->
                     <h4 class="title">تحفيز التعاون والشركة بين صناع المحتوى والموهوبين</h4>
                 </div>
             </div>
@@ -237,7 +238,7 @@
 
     </div>
     <div class="text-center" >
-        <button type="button" class="btn btn-info" style="background-color: #31696e;"> <a href="consultant.html" class="btn-get-started scrollto" id="textm">اختيار مستشار</a></button>
+        <button type="button" class="btn btn-info" style="background-color: #31696e; padding: 10px; padding-left: 20px; padding-right: 20px;"> <a href="consultant.html" class="btn-get-started scrollto" id="textm" style="color: white;">اختيار مستشار</a></button>
       </div>
 
     </div>
