--- a/profile.html
+++ b/profile.html
@@ -71,7 +71,7 @@
     
     #main {
 
-      background: #31696e;
+        background: linear-gradient(to bottom, #0e5c50 0%, #196b5c 65%, #368777 100%);
     }
 
     #main form {
@@ -150,11 +150,21 @@
                 <div class="col-md-6 offset-md-3">
                     <form action="#" method="post" class="shadow p-4">
                         <div class="mb-3 text-center">
-                            <img src="./assets/img/images/person.png" alt="" style="height: 20vh;">
-                            <h4>دانة الصبيح</h4>
-                            <h5>ممثلة</h5>
+                            <!-- <img src="./assets/img/images/person.png" alt="" style="height: 20vh;"> -->
+                            <i class="bi bi-person-circle" style="font-size: 130px; color: #9a9898;"></i>
+                            <h4>محمد الصالح</h4>
+                            <h5>؟؟؟؟</h5>
+                            <h5>؟؟؟؟</h5>
+                            <h5>؟؟؟؟</h5>
+                            <h5>؟؟؟؟</h5>
+                            <h5>؟؟؟؟</h5>
+                                <a href="login.php" class="btn btn-primary" style="background-color: #31696e; margin-top: 20px;">طلب استشارة</a>
+
+
+
+
                         </div>
-                        <div class="mb-3">
+                        <!-- <div class="mb-3">
                             <label for="email">البريد الالكتروني</label>
                             <input type="text" class="form-control" name="email" id="email"
                                 placeholder="البريد الالكتروني" value="Danahalsabih@gmail.com" required>
@@ -169,9 +179,9 @@
                             <label for="art_work">الأعمال السابقة</label>
                             <input type="text" class="form-control" name="art_work" id="art_work"
                                 placeholder="الأعمال السابقة" value="https://www.google.com/intl/ar/drive/" required>
-                        </div>
+                        </div> -->
                         <br>
-                        <h4 class="text-center">التقييم</h4>
+                        <!-- <h4 class="text-center">التقييم</h4>
                         <div class="d-flex p-3 justify-content-between align-items-center" style="background: #eee; border-radius: 8px;">
                           <div>
                             <h5>ممتازة</h5>
@@ -196,7 +206,7 @@
                                 <!-- <i class="bi bi-star-fill rating-color"></i>
                                 <i class="bi bi-star-fill rating-color"></i> -->
                             </div>
-                        </div>
+                        </div> -->
                         <br>
                         <!-- <div class="d-flex p-3 justify-content-between align-items-center" style="background: #eee; border-radius: 8px;">
                           <div>
