--- a/IFRS.html
+++ b/IFRS.html
@@ -148,7 +148,7 @@
                         <h4 class="title">معيار المخصصات والاحتمالات</h4>
                         <br><br><br>
                         <hr> 
-                        <a href="/ifrsM.html" class="card-link">تفاصيل اكثر</a>
+                        <a href="/Allocations.html" class="card-link">تفاصيل اكثر</a>
 
                     </div>
                 </div>
@@ -156,10 +156,10 @@
                 <div class="col-md-6 col-lg-4 d-flex align-items-stretch mb-5 mb-lg-0 justify-content-center">
                     <div class="icon-box info-cards" data-aos="fade-up" data-aos-delay="300">
 
-                        <h4 class="title">معيار الادوات المالية الاساسية</h4> <a href=""></a>
+                        <h4 class="title">معيار منافع الموظفين</h4> <a href=""></a>
                         <br><br><br>
                         <hr> 
-                        <a href="/ifrsM.html" class="card-link">تفاصيل اكثر</a>
+                        <a href="/employes.html" class="card-link">تفاصيل اكثر</a>
                     </div>
                 </div>
 
@@ -174,49 +174,14 @@
 
     <!-- ======= Features Section ======= -->
 
-    <section id="features" class="services">
-        <div class="container" data-aos="fade-up">
-
-            <div class="row">
-                <div class="col-md-6 col-lg-4 d-flex align-items-stretch mb-5 mb-lg-0 justify-content-center">
-
-                    <div class="icon-box info-cards" data-aos="fade-up" data-aos-delay="100">
-
-
-
-                        <h4 class="title">IFRS 5 Non-current Assets Held for Sale and Discontinued Operation</h4>
-                        <br><br><br>
-                        <hr> 
-                        <a href="/ifrsM.html" class="card-link">Read More</a>
-                    </div>
-                </div>
-                <div class="col-md-6 col-lg-4 d-flex align-items-stretch mb-5 mb-lg-0 justify-content-center">
-                    <div class="icon-box info-cards" data-aos="fade-up" data-aos-delay="200">
-
-                        <h4 class="title">IFRS 8 Business Combinations</h4>
-                        <br><br><br><br><br>
-                        <hr> 
-                        <a href="/ifrsM.html" class="card-link">Read More</a>
-                    </div>
-                </div>
-
-                <div class="col-md-6 col-lg-4 d-flex align-items-stretch mb-5 mb-lg-0 justify-content-center">
-                    <div class="icon-box info-cards" data-aos="fade-up" data-aos-delay="300">
-
-                        <h4 class="title">IFRS 9 Financial Insrument, Part1: Classification and Measurement</h4>
-                        <br><br><br>
-                        <hr> 
-                        <a href="/ifrsM.html" class="card-link">Read More</a>
-                    </div>
-                </div>
-
-            </div>
-
-        </div>
-
-        </div>
-    </section><!-- End Features Section -->
-
+    <div class="buttonn-area">
+        <a href="#">Button 1</a>
+        <a href="#">Button 2</a>
+        <a href="#">Button 3</a>
+        <a href="#">Button 4</a>
+        <a href="#">Button 5</a>
+        <a href="#">Button 6</a>
+    </div>
 
     <!-- Vendor JS Files -->
     <script src="assets/vendor/purecounter/purecounter_vanilla.js"></script>
