--- a/farad.html
+++ b/farad.html
@@ -108,7 +108,7 @@
             </a>
             <ul class="dropdown-menu" aria-labelledby="navbarDropdown">
                 <li><a class="dropdown-item" href="/IFRS.html">IFRS</a></li>
-                <li><a class="dropdown-item" href="/IAS.html">IAS</a></li>
+                <li><a class="dropdown-item" href="/soon.html">IAS</a></li>
             </ul>
        
 
@@ -164,73 +164,67 @@
 
 
 <!-- ======= DropDown Section ======= -->
-<br><br>
+
 
    <!-- ======= Services Section ======= -->
    <section id="features" class="services">
-    <div class="container" data-aos="fade-up" style="margin-bottom: 50px;">
-
-        <div class="section-title">
-            <h3>المعايير</h3>
+    <section id="Services" class="services-section" style="background-color: rgb(255, 255, 255); ">
+        <div class="container" data-aos="fade-up">
+          <div class="section-title">
+            <h3 style="color: #196b5c;">مايميز معاييرنا</h3>
+          </div>
+          <div class="row">
+            <div class="col-md-6 col-lg-4 d-flex align-items-stretch mb-5 mb-lg-0 justify-content-center">
+              <div class="icon-box info-cards service-element" data-aos="fade-up" data-aos-delay="100">
+                <!-- <div class="icon">
+                  <i class="bi bi-chat-right-dots"></i>
+                </div> -->
+                <h4 class="title" style="color: #196b5c;">شرح مفصل</h4>
+              </div>
+            </div>
+            <div class="col-md-6 col-lg-4 d-flex align-items-stretch mb-5 mb-lg-0 justify-content-center">
+              <div class="icon-box info-cards service-element" data-aos="fade-up" data-aos-delay="200">
+                <!-- <div class="icon"><i class="bi bi-search"></i></div> -->
+                <h4 class="title" style="color: #196b5c;">محدثة باستمرار</h4>
+              </div>
+            </div>
+            <div class="col-md-6 col-lg-4 d-flex align-items-stretch mb-5 mb-lg-0 justify-content-center">
+              <div class="icon-box info-cards service-element" data-aos="fade-up" data-aos-delay="300">
+                <!-- <div class="icon"><i class="bi bi-card-checklist"></i></div> -->
+                <h4 class="title" style="color: #196b5c;">التقييم والرقابة على الجودة</h4>
+              </div>
+            </div>
+          </div>
         </div>
-
-        <div class="row">
-            <div class="col-md-6 col-lg-4 d-flex align-items-stretch mb-5 mb-lg-0 justify-content-center">
-                <div class="icon-box info-cards" data-aos="fade-up" data-aos-delay="100">
-                    <!-- <div class="icon"><i class="bx bx-notepad"></i></div> -->
-                    <h4 class="title">إنشاء محتوى ترفيهي بجودة عالية</h4>
-                </div>
-            </div>
-            <div class="col-md-6 col-lg-4 d-flex align-items-stretch mb-5 mb-lg-0 justify-content-center">
-                <div class="icon-box info-cards" data-aos="fade-up" data-aos-delay="200">
-                    <!-- <div class="icon"><i class="bx bx-bulb"></i></div> -->
-                    <h4 class="title">دعم الموهوبين وخلق فرص لهم</h4>
-                </div>
-            </div>
-
-            <div class="col-md-6 col-lg-4 d-flex align-items-stretch mb-5 mb-lg-0 justify-content-center">
-                <div class="icon-box info-cards" data-aos="fade-up" data-aos-delay="300">
-                    <!-- <div class="icon"><i class="bx bx-file"></i></div> -->
-                    <h4 class="title">تحفيز التعاون والشركة بين صناع المحتوى والموهوبين</h4>
-                </div>
-            </div>
-
-        </div>
-
-    </div>
-    <!-- <div class="text-center" >
-        <button type="button" class="btn btn-info" style="background-color: #31696e;"> <a href="signup.html" class="btn-get-started scrollto" id="textm">مشاهدة المعايير</a></button>
-      </div> -->
-
-    </div>
-</section><!-- End Services Section -->
+      </section>
+    
  
    <!-- ======= Services Section ======= -->
    <section id="features" class="services" style="background-color: rgb(244, 244, 244);">
     <div class="container" data-aos="fade-up" style="margin-bottom: 50px;">
 
         <div class="section-title">
-            <h3>الاستشارات</h3>
+            <h3>مايميز استشاراتنا</h3>
         </div>
 
         <div class="row">
             <div class="col-md-6 col-lg-4 d-flex align-items-stretch mb-5 mb-lg-0 justify-content-center">
                 <div class="icon-box info-cards" data-aos="fade-up" data-aos-delay="100">
                     <!-- <div class="icon"><i class="bx bx-notepad"></i></div> -->
-                    <h4 class="title">إنشاء محتوى ترفيهي بجودة عالية</h4>
+                    <h4 class="title">استشارة مجانية عن طريق الذكاء الاصطناعي</h4>
                 </div>
             </div>
             <div class="col-md-6 col-lg-4 d-flex align-items-stretch mb-5 mb-lg-0 justify-content-center">
                 <div class="icon-box info-cards" data-aos="fade-up" data-aos-delay="200">
                     <!-- <div class="icon"><i class="bx bx-bulb"></i></div> -->
-                    <h4 class="title">دعم الموهوبين وخلق فرص لهم</h4>
+                    <h4 class="title">توفير مستشارين مختصين</h4>
                 </div>
             </div>
 
             <div class="col-md-6 col-lg-4 d-flex align-items-stretch mb-5 mb-lg-0 justify-content-center">
                 <div class="icon-box info-cards" data-aos="fade-up" data-aos-delay="300">
                     <!-- <div class="icon"><i class="bx bx-file"></i></div> -->
-                    <h4 class="title">تحفيز التعاون والشركة بين صناع المحتوى والموهوبين</h4>
+                    <h4 class="title">متاحة في كل وقت</h4>
                 </div>
             </div>
 
@@ -238,7 +232,7 @@
 
     </div>
     <div class="text-center" >
-        <button type="button" class="btn btn-info" style="background-color: #31696e; padding: 10px; padding-left: 20px; padding-right: 20px;"> <a href="consultant.html" class="btn-get-started scrollto" id="textm" style="color: white;">اختيار مستشار</a></button>
+        <button type="button" class="btn btn-info" style="background-color: #444188; padding: 10px; padding-left: 20px; padding-right: 20px;"> <a href="consultant.html" class="btn-get-started scrollto" id="textm" style="color: white;">اختيار مستشار</a></button>
       </div>
 
     </div>
