--- a/signup.html
+++ b/signup.html
@@ -41,7 +41,7 @@
     <style>
     #main {
 
-        background: linear-gradient(to bottom, #0e5c50 0%, #196b5c 65%, #368777 100%);
+        background: linear-gradient(to bottom, #1d1b5a 0%, #3b388d 65%, #444188 100%);
         color: #fff;
     }
 
