--- a/IFRSWITHOUTLOG.html
+++ b/IFRSWITHOUTLOG.html
@@ -34,7 +34,7 @@
     <style>
         body {
             font-family: Arial, Helvetica, sans-serif;
-            background: linear-gradient(to bottom, #0e5c50 0%, #196b5c 65%, #368777 100%);
+            background: linear-gradient(to bottom, #1d1b5a 0%, #3b388d 65%, #444188 100%);
         }
 
         .flip-card {
@@ -97,7 +97,7 @@
                     <li><a class="nav-link scrollto" href="IFRSWITHOUTLOG.html">المعايير</a></li>
                     <li><a class="nav-link scrollto" href="index.html" style="margin-left: 330px;">تواصل معنا</a></li>
 
-                        <button type="button" id="btn3" class="btn btn-primary" style="background-color:#31696e ; padding-left:26px ; padding-right: 26px; padding-top: 8px; padding-bottom: 8px;">
+                        <button type="button" id="btn3" class="btn btn-primary" style="background-color:#444188 ; padding-left:26px ; padding-right: 26px; padding-top: 8px; padding-bottom: 8px;">
                             <a href="/farad.html" style="color:#ffffff;">تسجيل دخول</a></button>
                     
                     
