--- a/consultant.html
+++ b/consultant.html
@@ -165,9 +165,9 @@
                 المعايير
             </a>
             <ul class="dropdown-menu" aria-labelledby="navbarDropdown">  
-                <li><a class="dropdown-item" href="/IFRS.html">IFRS SMEs</a></li> 
-                   <li><a class="dropdown-item" href="/soon.html">IFRS</a></li>
-                   <li><a class="dropdown-item" href="/soon.html">IAS</a></li>
+                <li><a class="dropdown-item" href="IFRS.html">IFRS SMEs</a></li> 
+                   <li><a class="dropdown-item" href="soon.html">IFRS</a></li>
+                   <li><a class="dropdown-item" href="soon.html">IAS</a></li>
                </ul>
           
        
