--- a/login.html
+++ b/login.html
@@ -137,7 +137,7 @@
                                 placeholder="أدخل كلمة المرور" required>
                         </div>
                         <div class="mb-3 text-center">
-                            <button type="button" class="btn btn-primary"><a href="/farad.html" style="color:#31696e;">تسجيل الدخول</a></button>
+                            <button type="button" class="btn btn-primary"><a href="farad.html" style="color:#31696e;">تسجيل الدخول</a></button>
                         </div>
 
                         <label for="have_not_account">ليس لديك حساب ؟</label> <a href="signup.html">إنشاء جديد</a>
