--- a/signup.html
+++ b/signup.html
@@ -87,11 +87,11 @@
             <nav id="navbar" class="navbar">
                 
                 <ul >
-                    <li style="margin-right: 330px;"><a class="nav-link scrollto active" href="#hero" >الرئيسية</a></li>
-                    <li><a class="nav-link scrollto " href="#Services">الخدمات</a></li>
-                    <li><a class="nav-link scrollto" href="#features">المميزات</a></li>
+                    <li style="margin-right: 330px;"><a class="nav-link scrollto active" href="index.html" >الرئيسية</a></li>
+                    <li><a class="nav-link scrollto " href="index.html">الخدمات</a></li>
+                    <li><a class="nav-link scrollto" href="index.html">المميزات</a></li>
                     <li><a class="nav-link scrollto" href="IFRSWITHOUTLOG.html">المعايير</a></li>
-                    <li><a class="nav-link scrollto" href="#contact" style="margin-left: 330px;">تواصل معنا</a></li>
+                    <li><a class="nav-link scrollto" href="index.html" style="margin-left: 330px;">تواصل معنا</a></li>
 
                         <button type="button" id="btn3" class="btn btn-primary" style="background-color:#3b388d ; ">
                             <a href="login.html" style="color:#ffffff; padding-left:19px ; padding-right: 19px; padding-top: 3px; padding-bottom: 3px;">تسجيل دخول</a></button>
@@ -167,7 +167,7 @@
                                 </div>
 
                                 <div class="mb-3 text-center">
-                                    <button type="button" class="btn btn-primary"><a href="/login.html" style="color:#31696e;">تسجيل</a></button>
+                                    <button type="button" class="btn btn-primary"><a href="login.html" style="color:#31696e;">تسجيل</a></button>
                                 </div>
 
                                 <label for="have_account">لديك حساب ؟</label> <a href="login.html">تسجيل الدخول</a>
@@ -246,7 +246,7 @@
                                         placeholder="تأكيد كلمة المرور">
                                 </div>
                                 <div class="mb-3 text-center">
-                                    <button type="button" class="btn btn-primary"><a href="/login.html" style="color:#31696e;">تسجيل</a></button>
+                                    <button type="button" class="btn btn-primary"><a href="login.html" style="color:#31696e;">تسجيل</a></button>
                                 </div>
                                 <label for="have_account">لديك حساب ؟</label> <a href="login.html">تسجيل الدخول</a>
                             </form>
@@ -267,7 +267,7 @@
                 <div class="container py-4">
                     <div class="row">
                         <div class="col-lg-12 text-center">
-                            جميع الحقوق محفوظة &copy;<strong><span>وُصلة</span></strong>
+                            جميع الحقوق محفوظة لمعيار&copy;<strong><span> 2023</span></strong>
                         </div>
                     </div>
                 </div>
