--- a/IFRSWITHOUTLOG.html
+++ b/IFRSWITHOUTLOG.html
@@ -98,7 +98,7 @@
                     <li><a class="nav-link scrollto" href="index.html" style="margin-left: 330px;">تواصل معنا</a></li>
 
                         <button type="button" id="btn3" class="btn btn-primary" style="background-color:#444188 ; padding-left:26px ; padding-right: 26px; padding-top: 8px; padding-bottom: 8px;">
-                            <a href="/farad.html" style="color:#ffffff;">تسجيل دخول</a></button>
+                            <a href="farad.html" style="color:#ffffff;">تسجيل دخول</a></button>
                     
                     
                 </ul>
